--- a/app/views/admin/audits/index.html.erb
+++ b/app/views/admin/audits/index.html.erb
@@ -1,8 +1,5 @@
-<%= render 'admin/admin_styles' %>
-
 <div class="admin-panel">
   <h1>Audit Log</h1>
-
   <table class="admin-table">
     <thead>
       <tr>
@@ -25,4 +22,5 @@
       <% end %>
     </tbody>
   </table>
-</div>
+
+    </div> <!-- admin-panel -->
