--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,7 @@
-<%= render 'admin/admin_styles' %>
-
-<h1>Edit User</h1>
+<div class="admin-panel">
+  <div class="admin-page-header">
+    <h1>Edit User</h1>
+  </div>
 
 <%= form_with model: [:admin, @user], local: true do |f| %>
   <% if @user.superadmin? %>
@@ -12,6 +13,7 @@
     <%= f.select :role, User.roles.keys.map { |r| [r.humanize, r] }, disabled: @user.superadmin? %>
   </div>
 
+    </div> <!-- admin-panel -->
   <% if current_user&.admin? || current_user&.superadmin? %>
     <div style="margin-top:8px;">
       <%= f.label :currency, "Total Credits" %><br>
