--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,9 +1,5 @@
-<%= render 'admin/admin_styles' %>
-
 <div class="admin-panel">
   <h1>Users</h1>
-
-  <table class="admin-table">
     <thead>
       <tr>
         <th>Email</th>
@@ -33,4 +29,6 @@
       <% end %>
     </tbody>
   </table>
-</div>
+
+    </div> <!-- admin-panel -->
+  </main>
